<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mi_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="36dp"
        android:layout_marginTop="57dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/empezar"
        app:layout_constraintBottom_toTopOf="@+id/imagen_rgb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mi_boton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/Resultado"
        app:layout_constraintBottom_toTopOf="@+id/imagen_rgb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imagen_rgb"
        android:layout_width="266dp"
        android:layout_height="258dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="76dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="338dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/rgb" />

    <Button
        android:id="@+id/buttonrojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="144dp"
        android:text="@string/rojo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonverde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="50dp"
        android:text="@string/verde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_rgb" />

    <Button
        android:id="@+id/buttonazul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="84dp"
        android:text="@string/azul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_rgb" />

    <Button
        android:id="@+id/buttonamarillo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="144dp"
        android:text="@string/amarillo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="30dp"
        android:text="@string/comprobar_ronda"
        app:layout_constraintBottom_toTopOf="@+id/imagen_rgb"
        app:layout_constraintEnd_toStartOf="@+id/mi_boton2"
        app:layout_constraintStart_toEndOf="@+id/mi_boton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>